--- a/src/app/core/tareas/component/tareas/peticiones/dialog-peticion-asignacion.component.scss
+++ b/src/app/core/tareas/component/tareas/peticiones/dialog-peticion-asignacion.component.scss
@@ -3,8 +3,10 @@
 .dialog-container {
   @include base.dialog-base;
 
-  position: relative;
-  overflow: visible;
+  & {
+    position: relative;
+    overflow: visible;
+  }
 }
 
 .titulo-modal {
